syntax = "proto3";
import "messages/messages.proto";

option go_package = "github.com/percona/percona-backup-mongodb/proto/api";
option java_multiple_files = true;
option java_package = "com.api";
option java_outer_classname = "ApiProto";

package api;

service Api {
  rpc GetClients(Empty) returns (stream Client) {}
  rpc RunBackup(RunBackupParams) returns (Error) {}
  rpc RunRestore(RunRestoreParams) returns (RunRestoreResponse) {}
  rpc LastBackupMetadata(LastBackupMetadataParams) returns (messages.BackupMetadata) {}
  rpc BackupsMetadata(BackupsMetadataParams) returns (stream MetadataFile) {}
}

enum BackupType {
   BACKUP_TYPE_INVALID   = 0;
   BACKUP_TYPE_LOGICAL   = 1;
   BACKUP_TYPE_HOTBACKUP = 2;
}

enum DestinationType {
   DESTINATION_TYPE_INVALID = 0;
   DESTINATION_TYPE_FILE    = 1; 
   DESTINATION_TYPE_AWS     = 2;
}

enum CompressionType {
   COMPRESSION_TYPE_INVALID        = 0;
   COMPRESSION_TYPE_NO_COMPRESSION = 1;
   COMPRESSION_TYPE_GZIP           = 2;
   COMPRESSION_TYPE_SNAPPY         = 3;
   COMPRESSION_TYPE_LZ4            = 4;
}

enum Cypher {
    CYPHER_INVALID   = 0;
    CYPHER_NO_CYPHER = 1;
    CYPHER_AES       = 2;
    CYPHER_DES       = 3;
    CYPHER_RC4       = 4;
    CYPHER_RSA       = 5;
}

message Empty {}
message BackupsMetadataParams {}
message LastBackupMetadataParams {}

message Error {
    string message = 1;
    int64  code    = 2;
}

message ClientStatus {
  string replicaset_uuid      = 1;
  string replicaset_name      = 2;
  uint64 replicaset_version   = 3; 
  bool   running_db_backup    = 4;    
  bool   running_oplog_backup = 5;
  string backup_type          = 6;
  string compression          = 7;       
  string encrypted            = 8;         
  string destination          = 9;       
  string dirname              = 10;
  string filename             = 11;          
  int64  started              = 12;           
  int64  finished             = 13;
  int64  start_oplog_ts       = 14;
  int64  last_oplog_ts        = 15;
  string last_error           = 16;         
}

message Client {
  int32        version           = 1;
  string       id                = 2;
  string       node_type         = 3;
  string       node_name         = 4;
  string       cluster_id        = 5;
  string       replicaset_name   = 6;
  string       replicaset_id     = 7;
  string       last_command_sent = 8;
  int64        last_seen         = 9;
  ClientStatus status            = 10;
}

message MetadataFile {
  string                  filename = 1;
  messages.BackupMetadata metadata = 2;
}

message RunBackupParams {
  BackupType      backup_type      = 1;
  CompressionType compression_type = 2;       
  Cypher          cypher           = 3;         
  DestinationType destination_type = 4;       
  string          dirname          = 5;
  string          filename         = 6;          
  int64           start_oplog_ts   = 7;
  string          description      = 8;
}

message RunRestoreParams {
  string metadata_file        = 1;
  bool   skip_users_and_roles = 2;
}

message RunRestoreResponse {
  string error = 1;
}

message BackupReplica {
  string agent_id         = 1;
  string node_type        = 2;
  string node_name        = 3;
  string cluster_id       = 4;
  string replicaset_name  = 5;
  string replicaset_id    = 6;
  int64  started_at       = 7;
}
    
